--- a/Diagrams/components.drawio.html
+++ b/Diagrams/components.drawio.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Main.drawio.html</title>
+<title>components.drawio.html</title>
 <meta charset="utf-8"/>
 </head>
 <body>
